elements/rh-table/rh-table.css
* {
  box-sizing: border-box;
}

#container {
  --rh-table-row-border:
    var(--rh-border-width-sm, 1px)
    solid
    var(--rh-color-border-subtle-on-light, #c7c7c7);
  --rh-table-row-background-color:
    rgb(
        var(
          --rh-color-gray-20-rgb,
          224 224 224
        )
        / var(--rh-opacity-40, 40%)
      );
  --rh-table-column-background-color:
    rgb(
        var(
          --rh-color-blue-50-rgb,
          0 102 204
        )
        / var(--rh-opacity-10, 10%)
      );
}

#container:is(.light, .lighter) {
  --rh-table-row-background-color:
    rgb(
        var(
          --_rh-color-white-rgb,
          255 255 255
        )
        / var(--rh-opacity-50, 50%)
      );
}

#container:is(.dark, .darker, .darkest) {
  --rh-table-row-border:
    var(--rh-border-width-sm, 1px)
    solid
    var(--rh-color-border-subtle-on-dark, #707070);
  --rh-table-row-background-color:
    rgb(
        var(
          --_rh-color-white-rgb,
          255 255 255
        )
        / var(--rh-opacity-10, 10%)
      );
  --rh-table-column-background-color:
    rgb(
        var(
          --rh-color-blue-70-rgb,
          0 51 102
        )
        / var(--rh-opacity-30, 30%)
      );
}

:host {
  position: relative;
  display: block;
  width: 100%;
  overflow: auto;
  scrollbar-color: var(--_scrollbar-track-color) var(--_scrollbar-thum-color);

  --_scrollbar-size: calc(10 / 16 * 1rem);
  --_scrollbar-thumb-color: var(--rh-color-gray-40, #a3a3a3);
  --_scrollbar-track-color: var(--rh-color-border-subtle-on-light, #c7c7c7);
}

:host::-webkit-scrollbar {
  width: var(--_scrollbar-size);
  height: var(--_scrollbar-size);
}

:host::-webkit-scrollbar,
:host::-webkit-scrollbar-track {
  background-color: var(--_scrollbar-track-color);
}

:host::-webkit-scrollbar-thumb {
  background-color: var(--_scrollbar-thumb-color);
}

[slot] {
  display: block;
}

/* @todo: should I move these styles to light dom css file? */
::slotted([slot="summary"]) {
  display: block;
  padding: var(--rh-space-xl, 24px) var(--rh-space-lg, 16px) 0 var(--rh-space-lg, 16px);
  color: var(--rh-color-text-secondary-on-light, #4d4d4d);
  font-family: var(--rh-font-family-body-text, RedHatText, "Red Hat Text", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif);
  font-size: var(--rh-font-size-body-text-md, 1rem);
  font-style: italic;
  font-weight: var(--rh-font-weight-body-text-regular, 400);
  line-height: var(--rh-line-height-body-text, 1.5);
}

